== 0.6.1

== 0.6.0

* Enhancements
  * Call comments are now also added to a Task Tracker group description
  * Choices can now be set to only show specific fields for different call types
  * Choices can now be set to only show specific fields for different evaluation administration types
  * Task Tracker stickies are now integrated on the Patient Timeline
  * Update to Rails 3.2.3

* Bug Fix
  * Fixed minor graphical menu bug for subject handlers

== 0.5.0

* Enhancements
  * Call creation integration with Task Tracker Templates
    * Selecting templates displays the stickies that will be generated
  * Mailings
    * Bulk Import from spreadsheet now available
  * Prescreens
    * Bulk Import moved to its own page, now availabe as a submenu item under Prescreens
    * Can be filtered by patients who have not had a call
  * Date filters added for Prescreens, Mailings, Calls, Evaluations, and Visits
  * Doctors, Clinics, and Choices GUI Updated
  * Patient Demographics displays aggregated ESS and Berlin scores from Calls and Mailings
  * Patients index filterable by priority message
  * Update to Rails 3.2.3.rc2

== 0.4.0

* Enhancements
  * Searching on index pages now uses autocomplete
  * Patient events now displayed as a timeline

== 0.3.0

* Enhancements
  * Subject Handler Role Added:
    * Can View, Create, Update, and Delete: Prescreens, Mailings, Calls, Evaluations, and Visits for Patients with Subject Codes
  * Patients list cleaned up
  * Mailings now include Risk Factors
  * Visits and Evaluations lists are now sortable
  * Overall visit progress bar added to dashboard
  * Patient events now display only the date for certain events (Mailings, Evaluations, and Visits)
  * Priority Followup added to allow filtering by patients who require immediate followup based on event criteria

== 0.2.1

* Bug Fix
  * Changed AHI to a decimal instead of an integer

== 0.2.0

* Enhancements
  * Evaluations have been added to track:
    * Administration Types: