@@ -27,7 +27,7 @@ gem 'jquery-rails'
 group :test do
   # Pretty printed test output
   gem 'win32console',                             :platforms => [ :mswin, :mingw ]
-  gem 'turn',               '~> 0.9.4'
+  gem 'turn',               '~> 0.9.5'
   gem 'simplecov',          '~> 0.6.1',           :require => false
   gem 'artifice'
 end
